// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagIcon: Component should render correctly 1`] = `
<tag.svg
  style={
    Object {
      "height": "30px",
      "stroke": "#FFF",
      "width": "30px",
    }
  }
/>
`;

exports[`TagIcon: Component should render with custom styles 1`] = `
<tag.svg
  style={
    Object {
      "fill": "blue",
      "height": "30px",
      "stroke": "#FFF",
      "width": "30px",
    }
  }
/>
`;
